--- a/94ea9836d643f3a3984904b476690444e1919022/index.html
+++ b/94ea9836d643f3a3984904b476690444e1919022/index.html
@@ -16,7 +16,7 @@
 
   <h1>Chalet Gringo Calendar</h1>
   <div id="calendar-goes-here"></div>
-  <small>Add events to this <a href="https://docs.google.com/spreadsheets/d/1SkAlgVXd9AxDxkqiBQPRMRZwmkcQl40IEHIyWiDk0tQ/edit?usp=sharing" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
+  <h3>Add date to the calendar <a href="https://docs.google.com/forms/d/e/1FAIpQLSdK_nEncILPPFmxlReF1Y5nhK-Uez6kP0_QK4fWNgLAxqeEGw/viewform?usp=sf_link" target="_blank">spreadsheet</a>.</h3>
 
   </body>
     <script type="text/javascript">
